apps/personal-website-v2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-website-v2
  namespace: personal-website-v2
spec:
  selector:
    app: personal-website-v2
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
