apps/personal-website-v2/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: personal-website-v2-www-kouidri-fr
  namespace: personal-website-v2
spec:
  hostnames:
    - www.kouidri.fr
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - name: personal-website-v2
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
---
# https://kouidri.fr -> https://www.kouidri.fr
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kouidri-to-www-redirect
  namespace: personal-website-v2
spec:
  hostnames:
    - kouidri.fr
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
            hostname: www.kouidri.fr
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: personal-website-v2-onion-route
  namespace: personal-website-v2
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: http  # Stay in HTTP with TOR
  hostnames:
    - "kouidri6bhboadbevagrvs52nmyvfhgafavqozvs6b756bzh3e4sd7qd.onion"
  rules:
    - backendRefs:
        - name: personal-website-v2
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
---
