apps/personal-website-v2/network-policy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: personal-website-v2
spec:
  podSelector: {}  # all namespace pods are selected
  policyTypes:
    - Ingress
    - Egress
